Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -77,7 +77,7 @@
    },
    "outputs": [],
    "source": [
-    "name = \"Erdal Budak\" # \"ART VANDELAY\"\n",
+    "name = \"Erdal Budak\" # \"ERDAL BUDAK\"\n",
     "name.upper()"
    ]
   },
